@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-21T01:11:02Z",
-  "count_outdated" : 9984,
-  "uniques_outdated" : 5011,
-  "count" : 10069,
-  "uniques" : 5077,
+  "timestamp" : "2025-11-21T12:30:28Z",
+  "count_outdated" : 9986,
+  "uniques_outdated" : 5012,
+  "count" : 10080,
+  "uniques" : 5085,
   "clones" : [
-    {
-      "timestamp": "2025-11-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-08T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-11-21T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
