@@ -1,12 +1,7 @@
 {
-  "count": 85,
-  "uniques": 55,
+  "count": 94,
+  "uniques": 61,
   "clones": [
-    {
-      "timestamp": "2025-11-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-11-08T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-11-21T00:00:00Z",
+      "count": 11,
+      "uniques": 8
     }
   ]
 }
