@@ -1,3 +1,12 @@
+2025-11-21T12:30:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19570558449 # 1319
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
+* notice: last 14d: unq all: 61 94
+* notice: prev accum: outdated-unq outdated-all / unq all: 5011 9984 / 5077 10069
+* notice: next accum: outdated-unq outdated-all / unq all: 5012 9986 / 5085 10080
+* notice: prev exec diff / last date diff / accum: unq all: +8 +11 -0 -0 / +8 +11 -0 -0 / 8 11
+* notice: removed / changed dates: [2025-11-07] / [2025-11-21]
+
 2025-11-21T01:11:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19556554338 # 1318
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
